refactor: game thread is, now, virtual